--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.7.0",
+    "nodemailer": "^6.8.0",
+    "sucrase": "^3.29.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
